<resources>
    <string name="app_name">pixionary</string>
    <string name="formatted_app_name">pixionary</string>
    <string name="action_settings">Settings</string>
    //Login and Create Account
    <string name="login_prompt">Please Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="attempts">Attempts Remaining: 10</string>
    <string name="create_ccount">Create Account</string>
    <string name="guest_login">Guest</string>
    <string name="create_message">Your Almost There!</string>
    <string name="btnCreate">Create Account</string>
    <string name="btnGuest">Guest</string>
    //Main Menu
    <string name="menu_join_game">Join Game</string>
    <string name="menu_host_game">Host Game</string>
    <string name="menu_build_game">Build Custom Game</string>
    <string name="menu_login">Login</string>
    <string name="dialog_settings">Settings</string>
    <string name="admin_settings">Admin Settings</string>
    //Leaderboard
    <string name="leaderboard_title">Leaderboard</string>
    <string name="next_text">Next</string>
    <string name="previous_text">Previous</string>
    //Gameplay
    <string name="remain_images">Images Remaining: 15</string>
    <string name="remain_dynamic">Images Remaining: %1$d</string>
    <string name="answer_hint">Your Answer Here</string>
    <string name="guess">Guess</string>
    <string name="game_browser">Game Browser</string>
    //Hosting
    <string name="host_game_title">Host Game</string>
    <string name="name_game">Title</string>
    <string name="playlist_label">Playlist: Select One</string>
    <string name="playlist_dynamic">Playlist: %1$s</string>
    <string name="creator_label">Creator: Select Playlist</string>
    <string name="creator_dynamic">Creator: %1$s</string>
    <string name="select">Select</string>
    <string name="ai">Play A.I.</string>
    <string name="one_v_one">1 V 1</string>
    //Lobby
    <string name="lobby_label">Lobby</string>
    <string name="lobby_dynamic">%1$s\'s Lobby</string>
    <string name="lobby_game_name_label">Game Name</string>
    <string name="lobby_game_name_dynamic">%1$s</string>
    <string name="chat_button">Chat</string>
    <string name="leave_button">Leave Game</string>
    <string name="start_button">Start Game</string>
    <string name="removed_player">Removed: %1$s</string>
    <string name="added_player">Added: %1$s</string>


</resources>
