<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lobby_full_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryYellow">

    <TextView
        android:id="@+id/tv_lobby_label"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/lobby_label"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/tv_player_update"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lobby_label" />

    <Button
        android:id="@+id/leave_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryRed"
        android:text="@string/leave_button"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/separator_center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_bottom" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryPurple"
        android:text="@string/start_button"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/separator_center"
        app:layout_constraintTop_toBottomOf="@id/separator_bottom" />

    <ListView
        android:id="@+id/player_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/separator_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_player_update"/>

    <android.support.constraint.Guideline
        android:id="@+id/separator_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85" />

    <android.support.constraint.Guideline
        android:id="@+id/separator_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />




</android.support.constraint.ConstraintLayout>